[package]
name = "zztff"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Library for reading/writing ZZT worlds and boards"
repository = "https://github.com/cmounce/zztff"
readme = "README.md"
keywords = ["zzt", "encoder", "decoder", "gamedev"]
categories = ["parser-implementations", "encoding"]

[dependencies]
codepage-437 = "0.1"
nom = "8.0"
num_enum = "0.7"
thiserror = "2.0"

[dev-dependencies]
insta = "1.46"
